// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowListNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar"
  >
    <h1
      className="navbar-brand mb-0 mr-auto"
    >
      CJ Workbench
    </h1>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="btn btn-secondary"
        data-toggle="dropdown"
        onClick={[Function]}
        type="button"
      >
        ☰
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu dropdown-menu-right"
        role="menu"
        tabIndex="-1"
      >
        <a
          className="dropdown-item"
          href="http://blog.cjworkbench.org"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Help 
        </a>
        <a
          className="dropdown-item"
          href="/account/logout"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Logout 
        </a>
      </div>
    </div>
  </nav>
</div>
`;

exports[`WorkflowNavBar renders correctly 1`] = `
<div>
  <nav
    className="navbar"
  >
    <form
      onSubmit={[Function]}
    >
      <label>
          Import module from GitHub:  
        <input
          onChange={[Function]}
          type="text"
          value={undefined}
        />
      </label>
      <input
        type="submit"
        value="Import"
      />
    </form>
    <div
      className="dropdown"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="btn btn-secondary"
        data-toggle="dropdown"
        onClick={[Function]}
        type="button"
      >
        ☰
      </button>
      <div
        aria-hidden={true}
        className="dropdown-menu dropdown-menu-right"
        role="menu"
        tabIndex="-1"
      >
        <a
          className="dropdown-item"
          href="/workflows"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Your Workflows 
        </a>
        <div>
          <div
            className="dropdown-divider"
            onClick={[Function]}
            tabIndex="-1"
            type={undefined}
          />
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
             Undo 
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
             Redo 
          </button>
          <div
            className="dropdown-divider"
            onClick={[Function]}
            tabIndex="-1"
            type={undefined}
          />
        </div>
        <a
          className="dropdown-item"
          href="http://blog.cjworkbench.org"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Help 
        </a>
        <a
          className="dropdown-item"
          href="/account/logout"
          onClick={[Function]}
          tabIndex="0"
          type={undefined}
        >
           Logout 
        </a>
      </div>
    </div>
  </nav>
</div>
`;
